crates/codegen/src/python/tests/snapshots/tern_codegen__python__tests__snapshot_tests__multi_file_init.snap
---
source: crates/codegen/src/python/tests/snapshot_tests.rs
assertion_line: 508
expression: "output.get(\"__init__.py\").unwrap()"
---
"""SQLModel definitions generated by Tern.

This file was automatically generated. Do not edit manually.
"""

from .user import User
from .post import Post

__all__ = ["User", "Post"]
