crates/codegen/src/python/tests/snapshots/tern_codegen__python__tests__snapshot_tests__multi_file_user.snap
---
source: crates/codegen/src/python/tests/snapshot_tests.rs
assertion_line: 509
expression: "output.get(\"user.py\").unwrap()"
---
"""SQLModel definition for User."""

from sqlmodel import Field, SQLModel

class User(SQLModel, table=True):
    __tablename__ = "users"

    id: int | None = Field(default=None, primary_key=True)
    name: str
    email: str
