crates/codegen/src/python/tests/snapshots/tern_codegen__python__tests__snapshot_tests__snapshot_all_postgres_types.snap
---
source: crates/codegen/src/python/tests/snapshot_tests.rs
assertion_line: 313
expression: "output.get(\"models.py\").unwrap()"
---
"""SQLModel definitions generated by Tern.

This file was automatically generated. Do not edit manually.
"""

from datetime import date, datetime, time, timedelta
from decimal import Decimal
from typing import Any
from uuid import UUID

from sqlalchemy import ARRAY, Integer, JSON, Text
from sqlmodel import Field, SQLModel

class AllType(SQLModel, table=True):
    __tablename__ = "all_types"

    id: int | None = Field(default=None, primary_key=True)
    col_int2: int
    col_int4: int
    col_int8: int
    col_float4: float
    col_float8: float
    col_numeric: Decimal
    col_bool: bool
    col_text: str
    col_varchar: str = Field(max_length=255)
    col_date: date
    col_time: time
    col_timestamp: datetime
    col_timestamptz: datetime
    col_interval: timedelta
    col_uuid: UUID
    col_int_array: list[int] = Field(sa_type=ARRAY(Integer))
    col_json: dict[str, Any] | None = Field(sa_type=JSON)
    col_jsonb: dict[str, Any] | None = Field(sa_type=JSON)
    col_bytea: bytes | None = None
    col_inet: str | None = None
    col_text_array: list[str] | None = Field(sa_type=ARRAY(Text))
