crates/codegen/src/python/tests/snapshots/tern_codegen__python__tests__snapshot_tests__snapshot_blog_schema.snap
---
source: crates/codegen/src/python/tests/snapshot_tests.rs
assertion_line: 243
expression: "output.get(\"models.py\").unwrap()"
---
"""SQLModel definitions generated by Tern.

This file was automatically generated. Do not edit manually.
"""

from datetime import datetime

from sqlmodel import Field, SQLModel

class User(SQLModel, table=True):
    __tablename__ = "users"

    id: int | None = Field(default=None, primary_key=True)
    username: str = Field(unique=True)
    email: str = Field(unique=True)
    created_at: datetime
    bio: str | None = None


class Post(SQLModel, table=True):
    __tablename__ = "posts"

    id: int | None = Field(default=None, primary_key=True)
    title: str
    content: str
    author_id: int = Field(foreign_key="public.users.id")
    created_at: datetime
    published_at: datetime | None = None


class Comment(SQLModel, table=True):
    __tablename__ = "comments"

    id: int | None = Field(default=None, primary_key=True)
    content: str
    post_id: int = Field(foreign_key="public.posts.id")
    author_id: int = Field(foreign_key="public.users.id")
    created_at: datetime
