crates/codegen/src/python/tests/snapshots/tern_codegen__python__tests__snapshot_tests__snapshot_complex_constraints.snap
---
source: crates/codegen/src/python/tests/snapshot_tests.rs
assertion_line: 407
expression: "output.get(\"models.py\").unwrap()"
---
"""SQLModel definitions generated by Tern.

This file was automatically generated. Do not edit manually.
"""

from decimal import Decimal

from sqlalchemy import CheckConstraint, UniqueConstraint
from sqlmodel import Field, SQLModel

class Product(SQLModel, table=True):
    __tablename__ = "products"
    __table_args__ = (
        UniqueConstraint("email", "tenant_id", name="products_email_tenant_key"),
        CheckConstraint("price > 0", name="products_price_positive"),
        CheckConstraint("quantity >= 0", name="products_quantity_non_negative"),
        CheckConstraint("status IN ('draft', 'active', 'archived')", name="products_status_valid"),
    )

    id: int | None = Field(default=None, primary_key=True)
    email: str
    tenant_id: int
    status: str
    price: Decimal
    quantity: int
