crates/codegen/src/python/tests/snapshots/tern_codegen__python__tests__snapshot_tests__snapshot_composite_primary_key.snap
---
source: crates/codegen/src/python/tests/snapshot_tests.rs
assertion_line: 576
expression: "output.get(\"models.py\").unwrap()"
---
"""SQLModel definitions generated by Tern.

This file was automatically generated. Do not edit manually.
"""

from decimal import Decimal

from sqlmodel import Field, SQLModel

class OrderItem(SQLModel, table=True):
    __tablename__ = "order_items"

    order_id: int = Field(primary_key=True)
    product_id: int = Field(primary_key=True)
    quantity: int
    unit_price: Decimal
