crates/codegen/src/python/tests/snapshots/tern_codegen__python__tests__snapshot_tests__snapshot_exclusion_constraint_warning.snap
---
source: crates/codegen/src/python/tests/snapshot_tests.rs
assertion_line: 554
expression: "output.get(\"models.py\").unwrap()"
---
"""SQLModel definitions generated by Tern.

This file was automatically generated. Do not edit manually.
"""

from datetime import datetime

from sqlmodel import Field, SQLModel

# WARNING: Exclusion constraint 'meetings_no_overlap' not supported by SQLModel: EXCLUDE USING gist (room_id WITH =, tsrange(start_time, end_time) WITH &&)
class Meeting(SQLModel, table=True):
    __tablename__ = "meetings"

    id: int | None = Field(default=None, primary_key=True)
    room_id: int
    start_time: datetime
    end_time: datetime
