crates/codegen/src/python/tests/snapshots/tern_codegen__python__tests__snapshot_tests__snapshot_reserved_words_table.snap
---
source: crates/codegen/src/python/tests/snapshot_tests.rs
assertion_line: 342
expression: "output.get(\"models.py\").unwrap()"
---
"""SQLModel definitions generated by Tern.

This file was automatically generated. Do not edit manually.
"""

from sqlmodel import Field, SQLModel

class ReservedWord(SQLModel, table=True):
    __tablename__ = "reserved_words"

    id: int | None = Field(default=None, primary_key=True)
    class_: str = Field(alias="class")
    from_: str = Field(alias="from")
    def_: int = Field(alias="def")
    return_: bool = Field(alias="return")
    async_: bool = Field(alias="async")
    import_: str | None = Field(alias="import")
    yield_: str | None = Field(alias="yield")
    await_: str | None = Field(alias="await")
    match_: str | None = Field(alias="match")
    case_: int | None = Field(alias="case")
