crates/codegen/src/python/tests/snapshots/tern_codegen__python__tests__snapshot_tests__snapshot_self_referential_table.snap
---
source: crates/codegen/src/python/tests/snapshot_tests.rs
assertion_line: 447
expression: "output.get(\"models.py\").unwrap()"
---
"""SQLModel definitions generated by Tern.

This file was automatically generated. Do not edit manually.
"""

from sqlmodel import Field, SQLModel

class Employee(SQLModel, table=True):
    __tablename__ = "employees"

    id: int | None = Field(default=None, primary_key=True)
    name: str
    manager_id: int | None = Field(foreign_key="public.employees.id")
