crates/codegen/src/python/tests/snapshots/tern_codegen__python__tests__snapshot_tests__snapshot_simple_users_table.snap
---
source: crates/codegen/src/python/tests/snapshot_tests.rs
assertion_line: 117
expression: "output.get(\"models.py\").unwrap()"
---
"""SQLModel definitions generated by Tern.

This file was automatically generated. Do not edit manually.
"""

from datetime import datetime

from sqlmodel import Field, SQLModel

class User(SQLModel, table=True):
    """User accounts for the application."""

    __tablename__ = "users"

    id: int | None = Field(default=None, primary_key=True)
    email: str = Field(unique=True)
    created_at: datetime
    name: str | None = None
